banking-app/main/default/objects/Loan_QA__c/Loan_QA__c.object-meta.xml
<CustomObject>
    <label>Loan Q&amp;A</label>
    <pluralLabel>Loan Q&amp;As</pluralLabel>
    <nameField>
        <label>Loan Q&amp;A Name</label>
        <type>AutoNumber</type>
        <displayFormat>QA-{0000}</displayFormat>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>