banking-app/main/default/objects/Loan_QA__c/fields/Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Loan_Application__c</fullName>
    <label>Loan Application</label>
    <type>MasterDetail</type>
    <referenceTo>Loan_Application__c</referenceTo>
    <relationshipLabel>Loan Q&amp;As</relationshipLabel>
    <relationshipName>Loan_QAs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>