banking-app/main/default/objects/Loan_QA__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <type>Text</type>
    <length>255</length>
</CustomField>